test/lit/pto/tilebuf_invalid_zero_shape.pto
// RUN: not ptoas --pto-arch=a3 %s 2>&1 | FileCheck %s

// CHECK: error: tile_buf rows/cols must be positive

func.func @test_zero_rows() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
  %tb = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f16, rows=0, cols=32, v_row=0, v_col=32, blayout=row_major, slayout=none_box, fractal=512, pad=0>
  return
}
